<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:ap="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_pages"
        android:title="@string/action_pages"
        ap:showAsAction="always"
        />
    <item
            android:id="@+id/action_search"
            android:title="@string/action_search"
            ap:showAsAction="always"
    />
    <item
            android:id="@+id/action_favorite"
            android:title="@string/action_favorite"
            ap:showAsAction="ifRoom"
    />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          ap:showAsAction="never"
    />

    <item android:id="@+id/action_loadcsv"
          android:title="@string/action_loadcsv"
          ap:showAsAction="never"
    />

</menu>